# rust_learning

./: Day1.md  Day10.md  Day2.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md  Day8.md  Day9.md  README.md
cloudflare_r2/: Cargo.toml  README.md
day10_production/: Cargo.toml
day10_production/src/: main.rs
day1_cli/: Cargo.toml
day1_cli/src/: main.rs
day2_borrowing/: Cargo.toml
day2_borrowing/src/: #main.rs#  .#main.rs  main.rs
day3_error_handling/: Cargo.toml
day3_error_handling/src/: main.rs
day4_traits/: Cargo.toml
day4_traits/src/: main.rs
day5_architecture/: Cargo.toml
day5_architecture/src/: main.rs  models.rs
day5_architecture/src/routes/: mod.rs  user_routes.rs
day6_actix_basics/: Cargo.toml
day6_actix_basics/src/: main.rs
day7_extractors/: Cargo.toml
day7_extractors/src/: main.rs
day8_database/: Cargo.toml
day8_database/src/: main.rs
day9_middleware/: Cargo.toml
day9_middleware/src/: main.rs
mastodon_cli/: AGENTS.md  Cargo.toml  README.md
mastodon_cli/src/: main.rs
triple_dragon/: Cargo.toml  README.md
triple_dragon/src/: main.rs
